# nursing-homes-data-analytics-app

./: README.md
dlt-data-sync/: pyproject.toml  rest_api_pipeline.py
dlt-data-sync/.dlt/: config.toml
llm-agents-lib/: pyproject.toml
llm-agents-lib/src/nursing_homes_agent_lib/: plot_builder_agent.py  text2sql_agent.py  visualization_pipeline.py
rest-api-server/: main.py  pyproject.toml
streamlit-app/: main.py  pyproject.toml
