[project]
name = "nursing-home-data-viz-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "nursing-homes-agent-lib",
    "plotly>=6.1.0",
    "streamlit>=1.45.1",
]

[tool.uv.sources]
nursing-homes-agent-lib = { path = "../llm-agents-lib", editable = true }
